<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TShock Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_generate_token">Generate Token</string>
    <string name="generate_message">Please enter your server\'\s IP and REST API port, and the login information of an admin account on the server.</string>
    <string name="ip_message">Enter your IP</string>
    <string name="port_message">Enter your Port</string>
    <string name="username_message">Enter your username</string>
    <string name="password_message">Enter your password</string>
    <string name="button_generate">Generate Token</string>
    <string name="placeholder">…</string>
    <string name="submit">Submit</string>

    <!-- Server commands -->
    <!-- Titles -->
    <string name="server_broadcast">Server broadcast</string>
    <string name="server_off">Server off</string>
    <string name="server_restart">Server restart</string>
    <string name="rawcmd">Execute command</string>
    <!-- Params -->
    <string name="message">Message</string>
    <string name="confirm">Confirm (true is confirm)</string>
    <string name="nosave">Do not save</string>
    <string name="cmd">Command</string>
    <!-- Values -->
    <string name="boolean_true">true</string>
    <string name="boolean_false">true</string>
    <string name="slash">/</string>

    <!-- Dashboard -->
    <string name="wait">Please wait…</string>
    <string name="checking_token">Checking your token</string>
    <string name="creating_token">Creating your token</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="unknown_error">Unknown error occurred</string>
    <string name="server_unreachable">The server you are trying to connect to could not be reached.</string>
    <string name="na">N/A</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="ok">OK</string>

    <!-- Server status -->
    <string name="server_name">Server name:&#160;</string>
    <string name="server_port">Server port:&#160;</string>
    <string name="server_players">Players:&#160;</string>
    <string name="server_players_text">%1$d/%2$d players online</string>
    <string name="server_world">World:&#160;</string>
    <string name="server_uptime">Uptime:&#160;</string>
    <string name="server_password">Server password:&#160;</string>

    <!-- Settings -->
    <string name="save">Save</string>

    <!-- Dialogs -->
    <!-- Server -->
    <string name="save">Save</string>
    <string name="ip">Server IP</string>
    <string name="port">Server REST port (leave empty for 7878)</string>
    <string name="display_name">Display name (leave empty for default)</string>
    <string name="username">Your username</string>
    <string name="password">Your password</string>

    <!-- Menus -->
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove">Remove</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_server">ServerActivity</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    
    <!-- Command groups -->
    <string name="server">Server</string>
    <string name="user">User</string>
    <string name="ban">Ban</string>
    <string name="player">Player</string>
    <string name="world">World</string>
    <string name="group">Group</string>

</resources>