<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GenerateToken" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_message" />

      <EditText android:id="@+id/ip_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ip_message"/>
       <EditText android:id="@+id/port_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/port_message"
        android:inputType="number"
        android:maxLength="4" />
    <EditText android:id="@+id/username_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username_message"/>
    <EditText android:id="@+id/password_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password_message"
        android:inputType="textPassword" />
    <Button
   		 android:layout_width="wrap_content"
   		 android:layout_height="wrap_content"
   		 android:text="@string/button_generate"
    	android:onClick="sendMessage" />


</LinearLayout>
