<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.activities.dashboard.DashboardActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/ServerStatusText.Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_name" />

            <TextView
                android:id="@+id/serverNameTextView"
                style="@style/ServerStatusText.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/ServerStatusText.Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_port" />

            <TextView
                android:id="@+id/serverPortTextView"
                style="@style/ServerStatusText.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/ServerStatusText.Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_players" />

            <TextView
                android:id="@+id/serverPlayersTextView"
                style="@style/ServerStatusText.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/ServerStatusText.Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_world" />

            <TextView
                android:id="@+id/serverWorldTextView"
                style="@style/ServerStatusText.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/ServerStatusText.Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_uptime" />

            <TextView
                android:id="@+id/serverUptimeTextView"
                style="@style/ServerStatusText.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/ServerStatusText.Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_password" />

            <TextView
                android:id="@+id/serverPasswordTextView"
                style="@style/ServerStatusText.Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/serverOffButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/server_off" />
            <Button
                android:id="@+id/serverRestartButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:text="@string/server_restart" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0" >


            <EditText
                android:layout_width="wrap_content"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:id="@+id/serverBroadcastEditText"
                android:hint="@string/server_broadcast_hint"/>

            <Button
                android:id="@+id/serverBroadcastButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:layout_weight="0.3"
                android:text="@string/server_broadcast" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0" >


            <EditText
                android:layout_width="wrap_content"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:id="@+id/serverRawCmdEditText"
                android:hint="@string/server_rawcmd_hint"/>

            <Button
                android:id="@+id/serverRawCmdButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:layout_weight="0.3"
                android:text="@string/server_rawcmd" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>